[project]
name = "human-in-the-loop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tomperez98", email = "tomasperezalvarez@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "resonate-sdk>=0.4.8",
    "salmon-mail>=3.3.0",
    "typer>=0.15.1",
]

[project.scripts]
hitl-auth = "human_in_the_loop.sender:main"
hitl-auth-service = "human_in_the_loop.auth_service:main"
hitl-listen = "human_in_the_loop.listener:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.3",
]
