[project]
name = "example-human-in-the-loop-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Resonate HQ", email = "contact@resonatehq.io" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "resonate-sdk>=0.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
]

[project.scripts]
    gateway = "src.gateway:main"
    worker = "src.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
